[tool.poetry]
name = "insurance"
version = "0.1.0"
description = ""
authors = ["Gavin Leech <g@gleech.org>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
xgboost = "shap"
shap = "^0.38.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
